# CZEditor

./: .gitignore  CMakeLists.txt  CZEditor  CZEditor.aps  CZEditor.cpp  CZEditor.h  CZEditor.hpp  CZEditor.pro  CZEditor.qrc  CZEditor.rc  CZEditor.sln  CZEditor.ui  CZEditor.vcxproj  CZEditor.vcxproj.filters  CzeButton.cpp  CzeButton.h  CzeButton.hpp  CzeViewport.cpp  CzeViewport.h  CzeViewport.hpp  CzeWindow.cpp  CzeWindow.h  CzeWindow.hpp  README.md  global.cpp  global.h  global.hpp  main.cpp
.github/workflows/: build.yml
data/desktop/: CZEditor.desktop
lib/libav/include/libavutil/: ffversion.h
src/: AV.hpp  Action.hpp  Actions.cpp  Actions.hpp  AudioManager.cpp  CZEditor.cpp  CZEditor.hpp  CzeAVContext.hpp  CzeButton.cpp  CzeButton.hpp  CzeColorPicker.cpp  CzeColorPicker.hpp  CzeLabel.hpp  CzeProjectSettings.hpp  CzeProperties.cpp  CzeProperties.hpp  CzeScrollArea.cpp  CzeScrollArea.hpp  CzeSpinBox.cpp  CzeSpinBox.hpp  CzeTextbox.cpp  CzeTextbox.hpp  CzeTimeline.cpp  CzeTimeline.hpp  CzeViewport.cpp  CzeViewport.hpp  CzeWindow.cpp  CzeWindow.hpp  Data.hpp  Effect.hpp  Effects.cpp  Effects.hpp  IAudioManager.hpp  ICZEditor.hpp  IKeyframe.hpp  IVideoManager.hpp  Keyframes.hpp  Manager.hpp  OpenGLStructs.hpp  Params.hpp  (+12 more)
